<resources>
    <string name="app_name">TIlaps</string>
    <string name="button_foto">Фото съемка</string>
    <string name="button_video">Видео съемка</string>
    <string name="button_video_foto">Видео на фото</string>
    <string name="button_calculator">Калькулятор</string>
    <string name="button_gallery">Галерея</string>
    <string name="button_setting">Настройки</string>
    <string name="button_info">Информация</string>
    <string name="version">Version 0.0.1</string>
    <string name="copyright">Copyright © 2020 Sergey Komissarov</string>
    <string name="tilaps">TiLaps</string>
    <string name="Calculator">Калькулятор</string>
    <string name="Shooting">Съемка</string>
    <string name="interval">Интервал</string>
    <string name="nol">0</string>
    <string name="second">сек</string>
    <string name="minuts">мин</string>
    <string name="fps">fps</string>
    <string name="size">Размер</string>
    <string name="mb">мб</string>
    <string name="hdr">hdr</string>
    <string name="super_mode">super</string>
    <string name="multi">multi</string>
    <string name="raw">raw</string>
    <string name="raw_jpg">raw + jpg</string>
    <string name="jpg">jpg</string>
    <string name="total_size">Итоговый размер</string>
    <string name="Lenght">Длительность</string>
    <string name="quantity_frame">Кол-во  Кадров</string>
    <string name="frequenc_frame">Частота  кадров</string>
    <string name="size_frame">Размер  кадра</string>
    <string name="mode">Режим</string>
    <string name="up">вверх</string>
    <string name="down">вниз</string>
    <string name="setting">Настройки</string>
    <string name="basic">Основные</string>
    <string name="location">Геопозиция</string>
    <string name="video">Видео</string>
    <string name="coming_soon">Появится в \nследующих \nобновлениях </string>
    <string name="no_support">Не поддерживается на вашем устройстве</string>


</resources>
