<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundloyout"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView22"
                style="@style/TextViewLayoutNameTilaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting" />

            <TextView
                android:id="@+id/textView23"
                style="@style/TextViewHeaderTilaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/basic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Switch
                    android:id="@+id/switch1"
                    style="@style/SwitcTilaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/location" />

                <Button
                    android:id="@+id/button"
                    style="@style/ButtonTilaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Разрешение" />

                <TextView
                    android:id="@+id/textView24"
                    style="@style/TextViewTilaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="18МП 3840x2160"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>